--- a/style.css
+++ b/style.css
@@ -1,16 +1,27 @@
 form{
-    display: table;
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    padding: 15px;
 }
 label{
-    display: table-cell;            
-}        
-input{
-    display:table-cell;            
+    margin-bottom: 3px;
+    margin-top: 3px;
 }
-p{
-    display: table-row;            
+input{
+    width: 55%;
+    border-radius: 3px;
+    border: 1px solid;
 }
 button{
-    display:table-cell;
-    margin-left: 3ex;
+    display: inline-block;
+    width: 8ex;
+    border-radius: 3px;    
 }
+table{
+    width: 100%;;    
+}
+td{
+    background-color: #ffffff;
+    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
+  }
