--- a/style.css
+++ b/style.css
@@ -1,15 +1,18 @@
 form{
     display: flex;
-    flex-direction: column;
-    width: 500px;
-    padding: 15px;
+    justify-content: center;
+    margin-top: 5%;
+    align-items: center;
+    flex-direction: column;    
 }
 label{
+    display: flex;
+    align-items:flex-start;
     margin-bottom: 3px;
     margin-top: 3px;
 }
 input{
-    width: 55%;
+    width: 25%;
     border-radius: 3px;
     border: 1px solid;
 }
@@ -21,15 +24,22 @@ button{
 
 #response{
     display: flex;
-    margin-left: 30px;
+    justify-content: center;    
 }
 
 table{
+    margin-left: auto;
+    margin-right: auto;
     width: 50%;
-    margin-left: 25px;    
 }
 td{
     background-color: #ffffff;
     border-color: darkolivegreen;
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
   }
+table tr:nth-child(even) td{
+    background-color: rgba(200, 233, 208, 0.336);
+}
+table tr:hover td{
+    background-color:rgba(130, 155, 240, 0.897);
+}
